dev: finish up development environment
1. add `artifact.dev-USER.testing-farm.io` nginx config
2. make artifacts work, setup correctly SSH to server
3. fix issues with nomad not streaming logs
4. move to latest worker image
5. move aliases generation to `TOOLS_PATH` as other scripts/binaries
6. speedup direnv by calling `ansible-vault` view only once
7. update `test/dev` to include running of a sanity test

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -6,29 +6,6 @@ export DIRENV_PATH="$PROJECT_ROOT/.direnv"
 export TOOLS_PATH="$DIRENV_PATH/bin"
 
 #
-# helpers
-#
-
-# The function is needed to create aliases, see
-# https://github.com/direnv/direnv/issues/73
-export_alias() {
-  local name=$1
-  shift
-  local alias_dir=$PWD/.direnv/aliases
-  local target="$alias_dir/$name"
-  local oldpath="$PATH"
-  mkdir -p "$alias_dir"
-  if ! [[ ":$PATH:" == *":$alias_dir:"* ]]; then
-    PATH_add "$alias_dir"
-  fi
-
-  echo "#!/usr/bin/env bash" > "$target"
-  echo "PATH=$oldpath" >> "$target"
-  echo "$@" >> "$target"
-  chmod +x "$target"
-}
-
-#
 # globals
 #
 export SECRETS_FILE="$PROJECT_ROOT/ansible/secrets/credentials.yaml"
@@ -37,6 +14,7 @@ export SECRETS_FILE="$PROJECT_ROOT/ansible/secrets/credentials.yaml"
 # helper
 #
 export IS_MAINTAINER="$(test -e $PROJECT_ROOT/.vault_pass && echo yes)"
+export VAULT_VIEW="$(poetry run -q ansible-vault view $SECRETS_FILE)"
 
 #
 # required
@@ -81,36 +59,33 @@ PATH_add "$DIRENV_PATH/.krew/bin"
 #
 # terraform
 #
-export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.terraform.cloud.testing_farm_bot.token)"
-export TF_VAR_terraform_api_url="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.terraform.cloud.api)"
+export TF_TOKEN_app_terraform_io=$(echo "$VAULT_VIEW" | yq -er .credentials.terraform.cloud.testing_farm_bot.token)
+export TF_VAR_terraform_api_url=$(echo "$VAULT_VIEW" | yq -r .credentials.terraform.cloud.api)
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$(dirname $SECRETS_FILE)"
-export TF_VAR_gitlab_testing_farm_bot="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.gitlab.testing_farm_bot_terragrunt.token)"
+export TF_VAR_gitlab_testing_farm_bot=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot_terragrunt.token)
 
 #
 # Testing Farm
 #
-export TESTING_FARM_API_URL="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.production.api_url)"
-export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.production.public.users.bot.token)"
+export TESTING_FARM_API_URL=$(echo "$VAULT_VIEW" | yq -r .credentials.testing_farm.production.api_url)
+export TESTING_FARM_API_TOKEN_PUBLIC=$(echo "$VAULT_VIEW" | yq -er .credentials.testing_farm.production.public.users.bot.token)
 # NOTE: this is not used currently, but we plan to use it later
-export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.production.redhat.bot_api_key)"
+export TESTING_FARM_API_TOKEN_REDHAT=$(echo "$VAULT_VIEW" | yq -er .credentials.testing_farm.production.redhat.bot_api_key)
 # Needed for development operations
-export TESTING_FARM_DEV_TOKEN_PUBLIC_DEVELOPER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.developer.token)"
-export TESTING_FARM_DEV_TOKEN_PUBLIC_ADMIN="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.admin.token)"
-export TESTING_FARM_DEV_TOKEN_PUBLIC_WORKER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.worker.token)"
-export TESTING_FARM_DEV_TOKEN_PUBLIC_DISPATCHER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.dispatcher.token)"
+export TESTING_FARM_DEV_TOKEN_PUBLIC_DEVELOPER=$(echo "$VAULT_VIEW" | yq -r .credentials.testing_farm.dev.public.users.developer.token)
+export TESTING_FARM_DEV_TOKEN_PUBLIC_ADMIN=$(echo "$VAULT_VIEW" | yq -r .credentials.testing_farm.dev.public.users.admin.token)
+export TESTING_FARM_DEV_TOKEN_PUBLIC_WORKER=$(echo "$VAULT_VIEW" | yq -r .credentials.testing_farm.dev.public.users.worker.token)
+export TESTING_FARM_DEV_TOKEN_PUBLIC_DISPATCHER=$(echo "$VAULT_VIEW" | yq -r .credentials.testing_farm.dev.public.users.dispatcher.token)
 export TESTING_FARM_DEV_API_URL_PUBLIC="http://api.dev-$(whoami).testing-farm.io"
 
 #
 # gitlab-ci-linter
 #
-export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.gitlab.testing_farm_bot.token)"
+export GITLAB_PRIVATE_TOKEN=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot.token)
 
 #
-# Testing Farm CLI
+# cleanup
 #
-export_alias testing-farm-dev-public-developer 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_DEVELOPER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
-export_alias testing-farm-dev-public-admin 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_ADMIN TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
-export_alias testing-farm-dev-public-worker 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_WORKER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
-export_alias testing-farm-dev-public-dispatcher 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_DISPATCHER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
+unset VAULT_VIEW
