--- a/.envrc
+++ b/.envrc
@@ -6,6 +6,29 @@ export DIRENV_PATH="$PROJECT_ROOT/.direnv"
 export TOOLS_PATH="$DIRENV_PATH/bin"
 
 #
+# helpers
+#
+
+# The function is needed to create aliases, see
+# https://github.com/direnv/direnv/issues/73
+export_alias() {
+  local name=$1
+  shift
+  local alias_dir=$PWD/.direnv/aliases
+  local target="$alias_dir/$name"
+  local oldpath="$PATH"
+  mkdir -p "$alias_dir"
+  if ! [[ ":$PATH:" == *":$alias_dir:"* ]]; then
+    PATH_add "$alias_dir"
+  fi
+
+  echo "#!/usr/bin/env bash" > "$target"
+  echo "PATH=$oldpath" >> "$target"
+  echo "$@" >> "$target"
+  chmod +x "$target"
+}
+
+#
 # globals
 #
 export SECRETS_FILE="$PROJECT_ROOT/ansible/secrets/credentials.yaml"
@@ -68,12 +91,26 @@ export TF_VAR_gitlab_testing_farm_bot="$(ansible-vault view --vault-password-fil
 #
 # Testing Farm
 #
-export TESTING_FARM_API_URL="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.ranch.public.api_url)"
-export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.ranch.public.bot_api_key)"
+export TESTING_FARM_API_URL="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.production.api_url)"
+export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.production.public.users.bot.token)"
 # NOTE: this is not used currently, but we plan to use it later
-export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.ranch.redhat.bot_api_key)"
+export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.testing_farm.production.redhat.bot_api_key)"
+# Needed for development operations
+export TESTING_FARM_DEV_TOKEN_PUBLIC_DEVELOPER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.developer.token)"
+export TESTING_FARM_DEV_TOKEN_PUBLIC_ADMIN="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.admin.token)"
+export TESTING_FARM_DEV_TOKEN_PUBLIC_WORKER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.worker.token)"
+export TESTING_FARM_DEV_TOKEN_PUBLIC_DISPATCHER="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.testing_farm.dev.public.users.dispatcher.token)"
+export TESTING_FARM_DEV_API_URL_PUBLIC="http://api.dev-$(whoami).testing-farm.io"
 
 #
 # gitlab-ci-linter
 #
 export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.gitlab.testing_farm_bot.token)"
+
+#
+# Testing Farm CLI
+#
+export_alias testing-farm-dev-public-developer 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_DEVELOPER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
+export_alias testing-farm-dev-public-admin 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_ADMIN TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
+export_alias testing-farm-dev-public-worker 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_WORKER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
+export_alias testing-farm-dev-public-dispatcher 'TESTING_FARM_API_TOKEN=$TESTING_FARM_DEV_TOKEN_PUBLIC_DISPATCHER TESTING_FARM_API_URL=$TESTING_FARM_DEV_API_URL_PUBLIC testing-farm $@'
