--- a/tests/worker/redhat/pipeline/tmt-x86_64.yaml
+++ b/tests/worker/redhat/pipeline/tmt-x86_64.yaml
@@ -26,7 +26,7 @@ checks:
   literal-strings:
     - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.staging.testing-farm.io'"
     - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
-    - "[coldstore] For the pipeline artifacts, see http://artifacts.osci.redhat.com/testing-farm/3d6572cb-d09b-4210-be68-4a77421eb131"
+    - "[coldstore] For the pipeline artifacts, see https://artifacts.osci.redhat.com/testing-farm/3d6572cb-d09b-4210-be68-4a77421eb131"
     - "[testing-farm-request-state-reporter] pipeline complete"
     - "[test-schedule-tmt-connect] cloning repo https://gitlab.com/testing-farm/tests (branch not specified, ref main)"
     - "[test-schedule-tmt-connect] tmt exited with code 0"
