--- a/tests/worker/redhat/pipeline/sti-x86_64.yaml
+++ b/tests/worker/redhat/pipeline/sti-x86_64.yaml
@@ -29,7 +29,7 @@ checks:
     - "[testing-farm-request] Initialized with f8b712c2-1baa-43b9-a5ab-b1668a31981e"
     - "[artemis] Using Artemis API"
     - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
-    - "[coldstore] For the pipeline artifacts, see http://artifacts.osci.redhat.com/testing-farm/f8b712c2-1baa-43b9-a5ab-b1668a31981e"
+    - "[coldstore] For the pipeline artifacts, see https://artifacts.osci.redhat.com/testing-farm/f8b712c2-1baa-43b9-a5ab-b1668a31981e"
     - "[testing-farm-request-state-reporter] pipeline complete"
     - "[test-scheduler-sti] cloning repo"
     - "[test-schedule-runner] running test schedule of 1 entries:"
