--- a/.pre-commit-config-maintainer.yaml
+++ b/.pre-commit-config-maintainer.yaml
@@ -77,6 +77,7 @@ repos:
             terragrunt/environments/.*/worker-public/citool-config/.*|
             terragrunt/environments/.*/worker-redhat/citool-config/.*|
             terragrunt/environments/.*/worker-public/jobs/.*|
+            terragrunt/environments/.*/worker-redhat/jobs/.*
           )$
       - id: terragrunt_fmt
 
