Update tft-cli to latest
Run the testing-farm tool via poetry run to mitigate it being run from
the system.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ cryptography = "^2.9.2"
 yq = "^2.10.0"
 boto3 = "1.24.21"
 "ruamel.yaml" = "^0.16.12"
-tft-cli = "^0.0.5"
+tft-cli = "*"
 markupsafe = "*"
 pytest-gluetool = {git = "https://gitlab.com/testing-farm/pytest-gluetool.git", rev = "main"}
 # TODO: gluetool *should* be deduced as a dependecy automatically from pytest-gluetool, but that does not happen.
