production/worker-redhat: proper fix for RHUI images
This is a follow up on
https://gitlab.com/testing-farm/infrastructure/-/merge_requests/569
where we thought `yum-plugin-priorities` is not available on RHEL for
SAP in RHUI environment.

The real problem is that all AWS RHUI images have to
explicitly enable `rhel-7-server-rhui-optional-rpms` repository.

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -74,6 +74,10 @@
     # For < RHEL8 we need to install yum-plugin-priorities
     #
     - block:
+        - name: Enable optional repo on RHUI systems
+          command: yum-config-manager --enable rhel-7-server-rhui-optional-rpms
+          when: "'rhui' in IMAGE_NAME|lower"
+
         - name: Make sure yum-plugin-priorities is installed on < RHEL8
           package:
             name: yum-plugin-priorities
@@ -116,7 +120,6 @@
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
-    - '"sap" not in IMAGE_NAME|lower'
 
   #
   # block: end
@@ -135,4 +138,3 @@
     or '"auto-osbuild" in IMAGE_NAME|lower'
     or '"composer-api" in IMAGE_NAME|lower'
     or '"hardened" in IMAGE_NAME|lower'
-    or '"sap" in IMAGE_NAME|lower'
