citool-config: fix TMT_REPORT_ARTIFACTS_URL
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -258,5 +258,6 @@ checks:
   literal-strings[work-basic*/log.txt]:
     - |
       environment:
+          TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
