--- a/tests/worker/public/tmt-x86_64.yaml
+++ b/tests/worker/public/tmt-x86_64.yaml
@@ -21,5 +21,6 @@ checks:
   literal-strings[work-sanity*/log.txt]:
     - |
       environment:
+          TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
