production/worker-redhat: support redhat git credentials
These are needed to clone private repos gitlab.com/redhat namespace.

Support in worker-redhat image:

https://gitlab.cee.redhat.com/baseos-qe/gluetool-modules-internal/-/commit/9ed86d192b93ff07cbf14dacbdc2498b4c176680

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/tasks/config.yaml
+++ b/ansible/tasks/config.yaml
@@ -17,6 +17,15 @@
   with_fileglob:
     - "{{ worker_deployment_data }}/citool-config/config/*.j2"
 
+- name: Render config templates (root)
+  become: true
+  template:
+    src: "{{ item }}"
+    dest: "/etc/citool.d/{{ item | basename | regex_replace('.j2','') }}"
+    mode: 0644
+  with_fileglob:
+    - "{{ worker_deployment_data }}/citool-config/*.j2"
+
 - name: Copy Artemis Private Key
   become: true
   copy:
