--- a/ansible/tasks/jobs.yaml
+++ b/ansible/tasks/jobs.yaml
@@ -1,18 +1,11 @@
 ---
-- name: Copy job scripts (dev, staging)
+- name: Generate job scripts
   become: true
   template:
-    dest: "/usr/local/bin/{{ item }}"
-    src: "{{ worker_deployment_data }}/jobs/{{ item }}.j2"
+    src: "{{ root_dir }}/ansible/templates/job-script.j2"
+    dest: "/usr/local/bin/{{ job_name }}"
     mode: "a+rwx"
-  with_items: "{{ jobs }}"
-  when:  deployment is regex('(dev|staging)')
-
-- name: Copy job scripts (production)
-  become: true
-  copy:
-    dest: "/usr/local/bin/{{ item }}"
-    src: "{{ worker_deployment_data }}/jobs/{{ item }}"
-    mode: "a+rwx"
-  with_items: "{{ jobs }}"
-  when:  deployment is regex('production')
+  loop: "{{ jobs_template_vars | dict2items }}"
+  vars:
+    job_vars: "{{ item.value }}"
+    job_name: "{{ item.key | replace('_', '-') }}"
