test-schedule-tmt: fix TMT_PLUGIN_REPORT_REPORTPORTAL_TOKEN, add TMT_PLUGIN_REPORT_REPORTPORTAL_UPLOAD_TO_LAUNCH

--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -259,5 +259,6 @@ checks:
     - |
       environment:
           TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
+          PATH: /usr/bin:/usr/sbin
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
