--- a/tests/worker/public/tmt-x86_64.yaml
+++ b/tests/worker/public/tmt-x86_64.yaml
@@ -22,5 +22,6 @@ checks:
     - |
       environment:
           TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
+          PATH: /usr/bin:/usr/sbin
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
