--- a/ansible/playbooks/create-redhat-worker.yaml
+++ b/ansible/playbooks/create-redhat-worker.yaml
@@ -88,13 +88,13 @@
     - ../secrets/credentials.yaml
     - ../vars/common.yaml
   pre_tasks:
-    - include: ../tasks/rh-certs.yaml
-    - include: ../tasks/dns.yaml
-    - include: ../tasks/ssh-key.yaml
-    - include: ../tasks/podman.yaml
-    - include: ../tasks/jobs.yaml
-    - include: ../tasks/config.yaml
-    - include: ../tasks/image.yaml
+    - include_tasks: ../tasks/rh-certs.yaml
+    - include_tasks: ../tasks/dns.yaml
+    - include_tasks: ../tasks/ssh-key.yaml
+    - include_tasks: ../tasks/podman.yaml
+    - include_tasks: ../tasks/jobs.yaml
+    - include_tasks: ../tasks/config.yaml
+    - include_tasks: ../tasks/image.yaml
   roles:
     - name: geerlingguy.swap
       vars:
@@ -106,7 +106,7 @@
       become: true
     - name: nomad
   tasks:
-    - include: ../tasks/jobs-register.yaml
+    - include_tasks: ../tasks/jobs-register.yaml
       when: skip_nomad_start is not defined
 
 - hosts: localhost
