--- a/ansible/playbooks/create-public-worker.yaml
+++ b/ansible/playbooks/create-public-worker.yaml
@@ -89,14 +89,14 @@
     - ../secrets/credentials.yaml
     - ../vars/common.yaml
   pre_tasks:
-    - include_tasks: ../tasks/dns.yaml
-    - include_tasks: ../tasks/ssh-key.yaml
-    - include_tasks: ../tasks/artifacts.yaml
-    - include_tasks: ../tasks/podman.yaml
-    - include_tasks: ../tasks/jobs.yaml
-    - include_tasks: ../tasks/config.yaml
-    - include_tasks: ../tasks/image.yaml
-    - include_tasks: ../tasks/terragrunt.yaml
+    - import_tasks: ../tasks/dns.yaml
+    - import_tasks: ../tasks/ssh-key.yaml
+    - import_tasks: ../tasks/artifacts.yaml
+    - import_tasks: ../tasks/podman.yaml
+    - import_tasks: ../tasks/jobs.yaml
+    - import_tasks: ../tasks/config.yaml
+    - import_tasks: ../tasks/image.yaml
+    - import_tasks: ../tasks/terragrunt.yaml
   roles:
     - name: geerlingguy.swap
       vars:
