--- a/ansible/playbooks/testing-farm.yaml
+++ b/ansible/playbooks/testing-farm.yaml
@@ -3,23 +3,23 @@
   vars_files:
     - ../secrets/credentials.yaml
   tasks:
-    - include_tasks: ../tasks/rh-certs.yaml
+    - import_tasks: ../tasks/rh-certs.yaml
 
 - hosts: testing_farm_public_workers:testing_farm_redhat_workers:testing_farm_dev_public_workers
   vars_files:
     - ../secrets/credentials.yaml
     - ../vars/common.yaml
   pre_tasks:
-    - include_tasks: ../tasks/dns.yaml
+    - import_tasks: ../tasks/dns.yaml
       tags: update_dns
-    - include_tasks: ../tasks/ssh-key.yaml
-    - include_tasks: ../tasks/artifacts.yaml
-    - include_tasks: ../tasks/podman.yaml
-    - include_tasks: ../tasks/jobs.yaml
+    - import_tasks: ../tasks/ssh-key.yaml
+    - import_tasks: ../tasks/artifacts.yaml
+    - import_tasks: ../tasks/podman.yaml
+    - import_tasks: ../tasks/jobs.yaml
       tags: update_jobs
-    - include_tasks: ../tasks/config.yaml
+    - import_tasks: ../tasks/config.yaml
       tags: update_config
-    - include_tasks: ../tasks/image.yaml
+    - import_tasks: ../tasks/image.yaml
       tags: update_image
   roles:
     - name: geerlingguy.swap
@@ -33,5 +33,5 @@
     - name: nomad
       tags: update_nomad
   tasks:
-    - include_tasks: ../tasks/jobs-register.yaml
+    - import_tasks: ../tasks/jobs-register.yaml
       tags: update_jobs
