--- a/tests/worker/public/sti-x86_64.yaml
+++ b/tests/worker/public/sti-x86_64.yaml
@@ -116,7 +116,7 @@ checks:
        <properties>
         <property name="baseosci.overall-result" value="passed"/>
        </properties>
-       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" result="passed" tests="1">
+       <testsuite name="git-main{{ '.+' }}/sti/tests.yaml" result="passed" tests="1" stage="complete">
         <logs>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/{{ artemis_guestname_pattern }}-artemis-guest-log.yaml" name="Guest event log"/>
          <log guest-setup-stage="pre_artifact_installation" href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-pre-artifact-installation.txt" name="guest setup" schedule-stage="guest-setup"/>
