--- a/tests/worker/public/tmt-container-rpminspect.yaml
+++ b/tests/worker/public/tmt-container-rpminspect.yaml
@@ -24,7 +24,7 @@ checks:
        <properties>
         <property name="baseosci.overall-result" value="passed"/>
        </properties>
-       <testsuite name="{{ PLAN }}" result="passed" tests="1">
+       <testsuite name="{{ PLAN }}" result="passed" tests="1" stage="complete">
         <logs>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-rpminspect{{ '.+' }}{{ PLAN }}/data" name="data"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-rpminspect{{ '.+' }}/tmt-run.log" name="tmt-log"/>
