--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
@@ -39,11 +39,7 @@
 
 - block:
   - name: Enable released Extras repository on Public Cloud RHUI images
-    ini_file:
-      dest: /etc/yum.repos.d/redhat-rhui.repo
-      section: rhel-7-server-rhui-extras-rpms
-      option: enabled
-      value: 1
+    command: yum-config-manager --enable rhel-7-server-rhui-extras-rpms
 
   when:
     - 'ansible_distribution == "RedHat"'
