citool-config: pass HOME to tmt environment
It is required when git-credentials are used, what is now only in
production, but add it everywhere to prevent deployment configuration
drift.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -260,5 +260,6 @@ checks:
       environment:
           TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
           PATH: /usr/bin:/usr/sbin
+          HOME: /root
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
