Fix dev worker setup
The `environment.yaml.j2` file is generated via a script,
we should not render it via ansible.

For now do not render the root templates in the dev and staging
environments, where this is not needed.

This will need some changes later on.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,15 @@ workflow:
         - Makefile*
         - setup/*
 
+  ansible:
+    - changes:
+        - ansible/files/**/*
+        - ansible/inventory/**/*
+        - ansible/requirements.yaml
+        - ansible/roles/**/*
+        - ansible/tasks/**/*
+        - ansible/vars/**/*
+
   terragrunt_modules_infra:
     - changes:
         - terragrunt/modules/gitlab/**/*
@@ -197,6 +206,7 @@ test/dev:
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
+    - !reference [.rules, ansible]
     - !reference [.rules, terragrunt_dev]
 
 test/staging/pipeline:
