--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -7,6 +7,7 @@
   - include_tasks: workaround-beaker-client-repo-unavailable.yaml
   - include_tasks: workaround-disable-qa-tools.yaml
   - include_tasks: workaround-centos-8.yaml
+  - include_tasks: workaround-centos-stream-8.yaml
   - include_tasks: workaround-automotive.yaml
   - include_tasks: workaround-beaker-repos.yaml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
