--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-stream-8.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-stream-8.yaml
@@ -12,7 +12,7 @@
   when:
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version == "8"'
-    - 'IMAGE_NAME|lower|regex_search("centos.stream.8")'
+    - 'IMAGE_NAME|lower|regex_search("(centos.stream.8|debezium)")'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
