tests: add PYTHONUNBUFFERED
Was forget when adding this change.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -261,5 +261,6 @@ checks:
           TMT_REPORT_ARTIFACTS_URL: https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}
           PATH: /usr/bin:/usr/sbin
           HOME: /root
+          PYTHONUNBUFFERED: 1
           POLARION_PASSWORD: *****
           POLARION_USERNAME: user
