dev: tag workers with developer name
Previously all dev workers were looked up (from CI, for other
developers) and it exploded in the face as more developers onboarded.

I removed all workers, so you will need to create a new one to make sure
it is correctly tagged.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_dev_public_workers.yaml
@@ -85,5 +85,6 @@ worker_resource_tags:
   ServiceName: TestingFarm
   ServiceComponent: Worker
   ServicePhase: Dev
+  Developer: "{ lookup('env', 'USER') }}"
 
 worker_group_name: testing_farm_public_dev_workers
